# cargo-limit

./: .gitignore  Cargo.toml  EDITOR-INTEGRATION.md  ENVIRONMENT-VARIABLES.md  LICENSE-MIT  NEOVIM-INTEGRATION.md  README.md  additional_environment_variables.txt  build.rs  cargo-fbuild  cargo-frun  cargo-ftest  rustfmt.toml  vint-const.patch
.github/: FUNDING.yml
.github/workflows/: ci.yml  rust.yml
plugin/: cargo-limit.vim
src/: cargo_toml.rs  env_vars.rs  flushing_writer.rs  io.rs  iterator_ext.rs  lib.rs  messages.rs  models.rs  options.rs  parsed_args.rs  process.rs
tests/: editor_data.rs  smoke.rs
tests/stubs/a/: Cargo.toml
tests/stubs/a/src/: lib.rs
tests/stubs/b/: Cargo.toml
tests/stubs/b/src/: a.rs
tests/stubs/bugs/: Cargo.toml
tests/stubs/bugs/src/: b.rs  cargo_toml.rs  io.rs  lib.rs  messages.rs  models.rs  options.rs  process.rs
tests/stubs/c/: Cargo.toml
tests/stubs/c/src/: models.rs
tests/stubs/c/tests/: t.rs
tests/stubs/custom_bench_runner/: Cargo.toml
tests/stubs/custom_test_runner/: Cargo.toml
tests/stubs/d/d/: Cargo.toml
tests/stubs/d/d/src/: lib.rs
tests/stubs/d/e/: Cargo.toml
tests/stubs/d/e/src/: lib.rs
tests/stubs/e/e/: Cargo.toml
tests/stubs/e/e/f/: Cargo.toml
tests/stubs/e/e/g/: Cargo.toml
tests/stubs/e/e/g/src/: lib.rs
tests/stubs/e/h/: Cargo.toml
tests/stubs/f/f/: Cargo.toml
tests/stubs/f/g/src/: lib.rs
tests/stubs/linker_error/: Cargo.toml
tests/stubs/linker_error/src/: main.rs
tests/stubs/minimal/: Cargo.toml
tests/stubs/typos/: Cargo.toml
tests/stubs/typos/src/: io.rs  lib.rs  messages.rs  models.rs  options.rs  process.rs
