[package]
authors = ["Alexander Lopatin <github.com/alopatindev>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "Cargo with less noise: warnings are skipped until errors are fixed, Neovim integration, etc."
documentation = "https://github.com/cargo-limit/cargo-limit#readme"
edition = "2024"
keywords = ["cargo", "neovim", "filter", "wrapper", "dedup"]
license = "MIT OR Apache-2.0"
name = "cargo-limit"
readme = "README.md"
repository = "https://github.com/cargo-limit/cargo-limit"
version = "0.0.12"

[dependencies]
anyhow = "1"
atomig = { version = "0.4", features = ["derive"] }
cargo_metadata = "0.23"
const_format = "0.2"
ctrlc = { version = "3", features = ["termination"] }
itertools = "0.14"
serde = "1"
serde_json = "1"
toml = "0.9"
which = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions = "1"
